# ctfusion-latency-prediction

./: .gitattributes  .gitignore  LICENSE  README.md  requirements.txt  train.py
benchmark_suite/: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  run_benchmark.py
benchmark_suite/configs/: benchmark_config.yaml
benchmark_suite/examples/: analyse_raw_data.py
benchmark_suite/src/: config.py  logger.py  utils.py
benchmark_suite/src/analysis/: curve.py
benchmark_suite/src/benchmarks/data_transfer/: core.py
benchmark_suite/src/benchmarks/gpu_compute/: core.py  layers.py
benchmark_suite/src/benchmarks/host_compute/: core.py  factory.py
benchmark_suite/src/benchmarks/host_compute/domains/: image_processing.py
ctfusion/: tune.py  utils.py
ctfusion/data/: make_dataset.py  preprocess.py
ctfusion/modeling/: train.py
data/00_raw/: hardwere_benchmark.csv
data/01_catalog/: cpu_specs.csv  gpu_specs.csv  model_specs.csv
experiments/configs/: exp001_holdout_ctfusion.yml  exp002_holdout_baseline_kernel_centric.yml  exp003_holdout_baseline_catalog_spec.yml  exp004_holdout_ablation_device_only.yml  exp005_holdout_ablation_without_interaction.yml
experiments/outputs/exp001_holdout_ctfusion_20250715_163234/: feature_list.json  holdout_metrics.csv  predictions.csv  summary.md
experiments/outputs/exp002_holdout_baseline_kernel_centric_20250721_185505/: feature_list.json  holdout_metrics.csv  predictions.csv  summary.md
notebooks/: stgc_evalatoin_all.ipynb
(+17 files in other folders)
